--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -558,7 +558,7 @@ p {
 
 /* ===== Hero CSS ===== */
 .ud-hero {
-  margin-top: 5%;
+  margin-top: 20%;
   background-repeat: no-repeat;
   position: relative;
 }
@@ -602,6 +602,9 @@ p {
   font-weight: 700;
   margin-bottom: 30px;
 }
+
+
+
 
 
 .ud-hero-content .ud-hero-desc {
@@ -687,7 +690,7 @@ p {
 
 .ud-hero-image {
   max-width: 80px;
-  margin: auto;
+  /* margin: auto; */
   text-align: center;
   position: relative;
   z-index: 1;
@@ -696,7 +699,7 @@ p {
 .ud-hero .hero-img{
   max-width: 100%;
   text-align: center;
- 
+  margin-top: -15%;
 }
 
 .hero-img-phn{
@@ -718,7 +721,7 @@ p {
   .hero-img-phn{
     display: flex;
     height: 500;
-    margin-top: 0%;
+    margin-top: 10%;
   }
 .hero-img-phn{
   display: none ;
@@ -727,7 +730,7 @@ p {
 
 @media (max-width: 767px) {
   .ud-hero .hero-img{
-    margin-top: 12%;
+    margin-top: -12%;
     height: 600px;
   }
 }
@@ -740,7 +743,7 @@ p {
   .hero-img-phn{
     display: flex;
     height: 500;
-    margin-top: 0%;
+    margin-top: -5%;
   }
 }
 
@@ -1469,7 +1472,7 @@ p {
   justify-content: space-around;
   gap: 30px;
   flex-wrap: wrap;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 .testimonial-card {
@@ -1481,7 +1484,7 @@ p {
   text-align: center;
   position: relative;
   transition: transform 0.3s ease;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 .testimonial-card:hover {
