--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -3029,5 +3029,33 @@ p {
   margin: 0 auto 20px;
 }
 
+/* make the pills big & friendly */
+#langTabs .nav-link {
+  font-size: 1rem;
+  font-weight: 600;
+  margin: 0 0.5rem;
+  padding: 0.75rem 1.25rem;
+  border-radius: 50px;
+  color: #4b2e19;
+  background-color: #fff;
+  transition: background 0.2s, color 0.2s;
+}
+#langTabs .nav-link.active {
+  background-color: #b01111;
+  color: #fff;
+}
+#langTabs .nav-link:hover {
+  background-color: #9b5722;
+  color: #fff;
+}
+
+/* content card */
+.tab-pane .bg-white {
+  line-height: 1.6;
+  color: #333;
+}
+.tab-pane hr {
+  border-top: 2px dashed #ffcc99;
+}
 
 /*# sourceMappingURL=ud-styles.css.map */
