--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -1867,7 +1867,7 @@ p {
   .brand-name {
     white-space: nowrap;    /* prevents wrapping to next line */
     overflow-x: auto;       /* if it’s too long, lets it scroll horizontally */
-    font-size: 0.10rem; 
+    font-size:20px; 
     color: #d97706;     /* optional: shrink slightly to fit */
   }
 }
