--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -869,6 +869,10 @@ p {
     font-weight: bold;
   }
 }
+button:not(:disabled) {
+  cursor: pointer;
+  margin-top: 10px;
+}
 
 @media (max-width: 412px) {
   .ud-features {
